objects/Costanti_Sistema__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Email_Supporto__c</fullName>
        <label>Email Supporto</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RT_Account_Cliente_BSN__c</fullName>
        <label>RT Account Cliente BSN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Account_OLO__c</fullName>
        <description>Contiene ID RT Account OLO</description>
        <label>RT Account OLO</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Asset_Risorsa__c</fullName>
        <label>RT Asset Risorsa</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Caso_Attivazione__c</fullName>
        <description>Contiene ID RT Caso Attivazione</description>
        <label>RT Caso Attivazione</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Caso_Cessazione__c</fullName>
        <description>Contiene ID RT Caso Cessazione</description>
        <label>RT Caso Cessazione</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Caso_TT__c</fullName>
        <description>Contiene ID RT Caso TT</description>
        <label>RT Caso TT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Costanti di Sistema</label>
</CustomObject>